crates/icydb-core/tests/ui/query/fluent/removed_group_terminal_methods.stderr
error[E0599]: no method named `group_count_distinct_by` found for struct `FluentLoadQuery<'a, E>` in the current scope
 --> tests/ui/query/fluent/removed_group_terminal_methods.rs:4:19
  |
4 |     let _ = query.group_count_distinct_by("rank");
  |                   ^^^^^^^^^^^^^^^^^^^^^^^ method not found in `FluentLoadQuery<'_, E>`
